# PicoCommon

./: .gitmodules  CMakeLists.txt  README.md  lwipopts.h  main.cpp  main_AP.cpp  main_ap.cpp
ap_website/: CMakeLists.txt  html_helper.c  picow_access_point.c  picow_access_point.h  url_collection.cpp  url_collection.h
filesystem/: CMakeLists.txt  filesystem.c  filesystem.h
http_server/: CMakeLists.txt  http_server.c  http_server.h  tcp_server.c  tcp_server.h  url_collection.cpp  url_collection.h  wifi.c  wifi.h
serial_console/: CMakeLists.txt  default_commands.c  serial_console.cpp  serial_console.h  system_status.c  system_status.h
system/: CMakeLists.txt  temperture.c  temperture.h
